nenolod     2005/09/03 22:56:23 UTC	(20050903-2089)
  Log:
  Copy over nickserv directory as skeleton for UserServ.
  

  Modified:
	trunk/modules/userserv/ (File Added) 


nenolod     2005/09/03 20:42:14 UTC	(20050903-2083)
  Log:
  Fix beu's real name in /info... because i was an idiot and didn't get it down right. 
  

  Modified:
	trunk/src/version.sh (File Modified) 


nenolod     2005/09/03 18:48:48 UTC	(20050903-2081)
  Log:
  Fix a bug relating to hashtable lookups. Fixes several bugs reported by 
  brian@notheme.org.
  

  Modified:
	trunk/src/function.c (File Modified) 


nenolod     2005/09/03 04:12:41 UTC	(20050903-2079)
  Log:
  Fix /cs why breakage.

  Modified:
	trunk/modules/chanserv/why.c (File Modified) 
	trunk/src/services.c (File Modified) 


nenolod     2005/09/03 03:51:56 UTC	(20050903-2077)
  Log:
  Remove race condition in ban(). Reported by many, over the last five months.
  

  Modified:
	trunk/src/services.c (File Modified) 


nenolod     2005/09/03 03:42:37 UTC	(20050903-2075)
  Log:
  Fix typo.

  Modified:
	trunk/modules/chanserv/why.c (File Modified) 


nenolod     2005/09/03 03:41:55 UTC	(20050903-2073)
  Log:
  Fix a crash when no parameters are provided.

  Modified:
	trunk/modules/chanserv/why.c (File Modified) 


nenolod     2005/09/03 02:50:45 UTC	(20050903-2071)
  Log:
  Clean up build system issues.

  Modified:
	trunk/modules/Makefile.in (File Modified) 


nenolod     2005/09/03 02:38:43 UTC	(20050903-2069)
  Log:
  Add /cs why <chan> <nick>. Explains why services is taking the onjoin actions it is taking.
  

  Modified:
	trunk/dist/example.conf (File Modified) 
	trunk/modules/chanserv/Makefile.in (File Modified) 
	trunk/modules/chanserv/why.c (File Added) 


nenolod     2005/09/02 06:55:32 UTC	(20050902-2067)
  Log:
  Fix a load error, discovered by pfish. (We probably should have reviewed this instead of impulsively merged it... oh well *sigh*).
  

  Modified:
	trunk/modules/operserv/main.c (File Modified) 

